<resources>
    <string name="app_name">Trivia</string>
    <string name="flag_que">What are the colors in the Indian national flag? Select all:</string>
    <string name="options">Options:</string>
    <string name="cricker_que">Who is the best cricketer in the world?</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="next">Next</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="virat_kolli">Virat Kolli</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="white">White</string>
    <string name="hello">Hello:</string>
    <string name="summary">Summary</string>
    <string name="game_date_and_time">Game date and Time:</string>
    <string name="answer">Answer:</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="here_are_the_answers_selected">Here are the answers selected:</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="enter_name">please enter your name</string>
    <string name="quiz_summary_titile">Quiz Summary</string>
    <string name="quiz_history">Quiz History</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="please_select_option">Please select option to proceed</string>
    <string name="insert_data_successfully">Record Insert Successfully</string>
    <string name="game">Game %1$s :</string>

</resources>